# goldener

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: pytest_and_linting.yaml  release.yaml  test_release.yaml
docs/posts/: GOLD_BATCHER.md  GOLD_SELECTION.md  GOLD_SPLIT.md  SMART_SPLIT.md
experiments/: utils.py
experiments/single_click/: compute.py  fifty_one_visualization.py  load.py  main.py  model.py  pixeltable_udf.py  utils.py
experiments/single_click/config/: config.yaml
experiments/single_click/config/model/: sam.yaml
experiments/single_click/models/: load.py
experiments/single_click/test/: test_compute.py  test_model.py  test_utils.py
goldener/: __init__.py  clusterize.py  dataset.py  describe.py  distance.py  distribute.py  embed.py  extract.py  organize.py  pxt_utils.py  reduce.py  select.py  split.py  torch_utils.py  utils.py  vectorize.py
goldener/vision/: transform.py  vectorizers.py  vision_vectorizers.py
test/: test_extract.py
tests/: test_batch.py  test_clusterize.py  test_dataset.py  test_describe.py  test_distance.py  test_embed.py  test_extract.py  test_organize.py  test_pxt_utils.py  test_reduce.py  test_select.py  test_split.py  test_torch_utils.py  test_utils.py  test_vectorize.py  test_vision_vectorizers.py
tests/vision/: test_transform.py  test_vision_vectorizers.py
tools/: README.md  optimize_gold_descriptor.py
