[project]
name = "goldener"
version = "0.1.0"
description = "Goldener - Make your data even more valuable"
authors = [
    { name = "Yann-CV", email = "yann.chene.tni@gmail.com"}
]

requires-python = "==3.13.*"
dependencies = [
  "torch",
  "numpy",
  "pixeltable",
  "ray[default, data]",
  "nvidia-ml-py",
  "scikit-learn",
  "umap-learn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "ruff",
  "mypy",
  "types-pillow",
  "types-tqdm",
]
